--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,9 @@ selenium
 streamlit
 supabase
 altair<5
-base58 = "*"
-blinker = "*"
-boto3 = "*"
+base58 
+blinker 
+boto3 
 botocore
 cachetools
 click
@@ -21,3 +21,4 @@ pydeck
 python-dateutil
 requests
 standard-imghdr
+
