--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ pandas
 playwright
 requests
 selenium
-streamlit = 1.53.0
+streamlit==1.53.0
 supabase
 altair<5
 base58 
@@ -21,5 +21,6 @@ pydeck
 python-dateutil
 requests
 standard-imghdr
+
 
 
